# test_task_obrio

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dashboard  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: dependencies.py  middleware.py
app/api/routes/: competitive.py  health.py  metrics.py  rag.py  reviews.py
app/constants/: app_groups.py
app/models/: database.py  schemas.py
app/services/: aspects.py  competitive.py  insights.py  keywords.py  metrics.py  preprocessing.py  rag.py  scraper.py  sentiment.py
app/utils/: helpers.py  logger.py
dashboard/: app.py
tests/: conftest.py  test_api.py  test_aspects.py  test_keywords.py  test_metrics.py  test_rag.py  test_scraper.py  test_sentiment.py
