[dependency-groups]
dev = [
  "deptry>=0.24.0",
  "pre-commit>=4.5.1",
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.4"
]

[project]
dependencies = [
  "aiosqlite>=0.22.1",
  "chromadb>=1.5.2",
  "fastapi>=0.134.0",
  "httpx>=0.28.1",
  "keybert>=0.9.0",
  "nltk>=3.9.3",
  "plotly>=6.5.2",
  "pydantic-settings>=2.13.1",
  "scikit-learn>=1.8.0",
  "sentence-transformers>=5.2.3",
  "spacy>=3.8.11",
  "sqlalchemy[asyncio]>=2.0.47",
  "streamlit>=1.54.0",
  "torch>=2.10.0",
  "transformers>=5.2.0",
  "uvicorn[standard]>=0.41.0"
]
description = "Apple Store Review Analysis API with ML-powered insights"
name = "test-task-obrio"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
ignore = ["B008"]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
